--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
 </head>
 <body>
     <header class="bg-dark">
@@ -53,12 +54,14 @@
 </section>
 
     <!--footer-->
-    <div class="row" style="background-color:black; color:white; text-align:center;">
+    <div class="row" style="background-color:black; color:white; text-align:center; ">
         <div class="col-md-12">
             <p>@copyright athira.All Rights Reserved<br>
             Designed by Athira</p>
             <div class="foot">
-                <a href="https://instagram.com/athira._ramesh_?utm_medium=copy_link" class="fa fa-instagram"></a>
+                <a href="https://instagram.com/athira._ramesh_?utm_medium=copy_link" ><i class="fa fa-instagram" style="color:red; background-color:black;"></i></a>
+                <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox" style="color: red;"><i class="bi bi-envelope" style="color:red; background-color:black;"></i></a>
+                <a href="https://www.youtube.com/" ><i class="bi bi-youtube" style="color:red; background-color:black;"></i></a>
             </div>
         </div>
     </div>
