--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>home</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
 </head>
 <body>
@@ -71,7 +71,9 @@
             <p>@copyright athira.All Rights Reserved<br>
             Designed by Athira</p>
             <div class="foot">
-                <a href="https://instagram.com/athira._ramesh_?utm_medium=copy_link" class="fa fa-instagram"></a>
+                <a href="https://instagram.com/athira._ramesh_?utm_medium=copy_link" ><i class="fa fa-instagram" style="color:red; background-color:black;"></i></a>
+                <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox" ><i class="bi bi-envelope" style="color:red; background-color:black;"></i></a>
+                <a href="https://www.youtube.com/" ><i class="bi bi-youtube" style="color:red; background-color:black;"></i></a>
             </div>
         </div>
     </div><!--    end footer-->
